k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    stage: dev
  name: tpc-radar
  namespace: tpc-radar
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: tpc-radar
    stage: dev
  sessionAffinity: None
  type: ClusterIP
